--- a/Calculator/View/Base.lproj/Main.storyboard
+++ b/Calculator/View/Base.lproj/Main.storyboard
@@ -228,10 +228,11 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.48049137322308266" green="0.6955065068931352" blue="0.73711135786802029" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                <state key="normal" title=" ">
+                                <state key="normal" title="√">
                                     <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
+                                    <action selector="performOperationWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fz1-Kz-31N"/>
                                     <action selector="touchDigit:" destination="BYZ-38-t0r" eventType="touchUpInside" id="AS6-VE-waA"/>
                                 </connections>
                             </button>
@@ -244,7 +245,7 @@
                                     <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="piOperation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IgQ-xG-M45"/>
+                                    <action selector="performOperationWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iTB-bs-LJZ"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fme-gc-zxL">
