updated container background color

--- a/Calculator/View/Base.lproj/Main.storyboard
+++ b/Calculator/View/Base.lproj/Main.storyboard
@@ -248,7 +248,7 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" red="0.83741801979999997" green="0.83743780850000005" blue="0.83742713930000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <accessibility key="accessibilityConfiguration" label="calculatorContainer"/>
                             </view>
                         </subviews>
